Adding another package for reflective access and moving the sample vmoptions file to docs.